--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
     <scope>test</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+	<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.23.0</version>
+		</dependency>
+
+
   </dependencies>
 
   <build>
