--- a/src/main/resources/config/qa.config.properties
+++ b/src/main/resources/config/qa.config.properties
@@ -1,5 +1,5 @@
 browser=chrome
-headless=true
+headless=false
 incognito=true
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 username = rahl@gmail.com
