--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,47 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+name: CI Pipeline
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
-
+# Trigger the workflow on push and pull requests to main branch
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 18
-      uses: actions/setup-java@v4
-      with:
-        java-version: '18'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean install -Denv="qa" -e
+      # Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      # Set up JDK 1.8
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'  # Matches Java 1.8 requirement
+          distribution: 'temurin'  # Eclipse Temurin distribution for JDK
+
+      # Cache Maven dependencies
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+
+      # Run Maven build with specified command
+      - name: Build with Maven
+        run: mvn clean install -Denv="qa"
+
+      # Optional: Display build output (e.g., for debugging)
+      - name: List target directory
+        run: ls -la target/
+        if: success() || failure()  # Runs even if build fails for debugging
+
+    # Environment variables (optional, adjust if needed)
+    env:
+      MAVEN_OPTS: '-Xmx1024m'  # Optional: Adjust memory settings if needed
