changed surefire plugin version

--- a/src/main/resources/config/qa.config.properties
+++ b/src/main/resources/config/qa.config.properties
@@ -1,6 +1,6 @@
 browser=chrome
-headless=false
-incognito=true
+headless=true
+incognito=false
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 username = rahl@gmail.com
 password = Ujjain@@123
