--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,26 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <extentreports-version>5.0.8</extentreports-version>
         <selenium-java>4.9.0</selenium-java>
         <aspectj.version>1.9.19</aspectj.version>
         <allure.version>2.22.1</allure.version>
         <lombok.version>1.18.32</lombok.version>
     </properties>
+    <repositories>
+  <repository>
+    <id>central</id>
+    <url>https://repo1.maven.org/maven2</url>
+    <releases>
+      <enabled>true</enabled>
+    </releases>
+    <snapshots>
+      <enabled>false</enabled>
+    </snapshots>
+  </repository>
+</repositories>
 
     <dependencies>
         <!-- Selenium -->
@@ -93,8 +105,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.12.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -110,7 +122,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>3.1.2</version>
                 <configuration>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
@@ -121,7 +133,7 @@
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <systemPropertyVariables>
-                        <env>${env}</env> <!-- Pass -Denv="qa" to tests -->
+                        <env>${env}</env> 
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
