ignore test fialures configuration in pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
                     <systemPropertyVariables>
                         <env>${env}</env> 
                     </systemPropertyVariables>
+                     <testFailureIgnore>true</testFailureIgnore> <!--Ignore test failures -->
                 </configuration>
             </plugin>
         </plugins>
